refactor: refactor jwt validation logic